# Python-Projects

./: simple_neural_network.ipynb
ai/ai-agent-project-structure/: README.md
ai/ai-project-structure/: README.md  setup_structure.sh
ai/python-ai-agent/: README.md  main.py  pyproject.toml
ai/python-ai-datagen-agent/: .gitignore  README.md  main.py  pyproject.toml
ai/python-langchain-agent/: .gitignore  README.md  agents.py  main.py  prompts.py  pyproject.toml  requirements.txt  tools.py
ai/python-langchain-agent/agent/: claude_agent.py  data.py  openai_agent.py  tools.py
ai/python-simple-neural-network/: README.md
ai/python-simple-neural-network/notebooks/modeling/: simple_neural_network.ipynb
ai/python-simple-neural-network/src/: simple_neural_network.py
google-colab/: simple_neural_network.ipynb
