[project]
name = "python-langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.0",
]
